# info-viz-league

./: .gitignore  README.md  lol_viz2025.spec  pyproject.toml
data/: champ_ids.csv
src/: app.py  data_prep.py  lol_plots.py  main.py  map_plots.py  utils.py
src/layout/: main_menu.py
src/layout/filters/: callbacks.py  filtering.py  filters_layout.py
src/layout/map/: callbacks.py  map_layout.py
src/layout/plots/: callbacks.py  plots_layout.py
test-vis-ahmed/: app.py
test-vis-ahmed/components/: callbacks.py  kills_tab.py  layout.py  plots.py  utils.py
test_vis_antoine/: app.py
test_vis_antoine/components/main_menu/: main_menu.py  main_menu_callbacks.py
test_vis_antoine/components/map/: map_callbacks.py  map_tab.py
test_vis_antoine/components/test/: test_tab.py
tests_loic/: explo.ipynb
