[project]
name = "info-viz-league"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.1",
    "dash-ag-grid>=31.3.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pyinstaller>=6.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
